--- a/soluciones_practica_2.ipynb
+++ b/soluciones_practica_2.ipynb
@@ -130,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.37124190206055 %\n"
+      "Accuracy: 92.36676695145711 %\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variables usadas con importancia: [(0, 0.339060556725056), (1, 0.028367617412519166), (2, 0.01722459228192804), (3, 0.06046193308605986), (4, 0.047012006521964744), (5, 0.14732689343271965), (6, 0.03126687301438378), (7, 0.03363475810880696), (8, 0.023921731718504837), (9, 0.145381136655504), (10, 0.0075862728882926285), (11, 0.0038771885661229772), (12, 0.013211903052229164), (13, 0.0013567207946456033), (14, 0.0003112452620936735), (15, 0.009749899148641984), (16, 0.001371998748136303), (17, 0.011256278276105973), (18, 0.00027362436614614133), (19, 0.0006242299291356896), (22, 0.00011716541185293033), (23, 0.0025326202252996793), (24, 0.0018453820884775135), (25, 0.0009165720994215083), (26, 0.0033931357644933088), (27, 0.00010569048137673425), (28, 1.0886440090901791e-05), (29, 0.0007622993072567381), (30, 0.0012257277453666573), (31, 8.88585529771936e-06), (32, 0.0009640779258550268), (33, 0.0030349468341821536), (34, 0.000288673069921457), (35, 0.006863992571253998), (36, 0.0087839892208561), (37, 0.003958574688087483), (38, 0.00010431416430409656), (39, 0.00019084927334239477), (40, 0.0007566550151592936), (41, 0.0001348846061761613), (42, 0.006569478984406966), (43, 0.0027833240200561497), (44, 0.005662699231340521), (45, 0.012916739222270502), (46, 0.005106898239132998), (47, 0.00025255390360538255), (48, 0.0010396261441299114), (49, 5.131106273029016e-05), (50, 0.00015373163499381702), (51, 0.0018826571023949762), (52, 0.003455730402879259), (53, 0.0008484672749904245)]\n"
+      "Variables usadas con importancia: [(0, 0.3392694227279648), (1, 0.027817898484706338), (2, 0.01706512515305949), (3, 0.06043275375416681), (4, 0.047077363158088956), (5, 0.1481402287530377), (6, 0.031476801133559336), (7, 0.033948826142395264), (8, 0.023900240220958126), (9, 0.14514998519150013), (10, 0.009321825964026333), (11, 0.0019784254176146887), (12, 0.012648928230574544), (13, 0.0016870235788994255), (14, 0.0003103245184043932), (15, 0.009749899148641982), (16, 0.0013705417471334854), (17, 0.011245225857551158), (18, 0.00026533767294261904), (19, 0.0005996866768567136), (21, 1.868225602792526e-05), (22, 0.00011716541185293032), (23, 0.0025416259754795912), (24, 0.0018289600667527218), (25, 0.0008580963640760928), (26, 0.0033135479155385664), (27, 0.00010279671549613918), (28, 1.088644009090179e-05), (29, 0.0007932559303055775), (30, 0.0012106089792418369), (31, 8.885855297719358e-06), (32, 0.0009827554114658725), (33, 0.0029428139931417037), (34, 0.00028867306992145695), (35, 0.006893738184257943), (36, 0.008740845006419782), (37, 0.0038866100817980583), (38, 0.0001036436227042946), (39, 4.2216257143244364e-05), (40, 0.0008226709256238527), (41, 0.00015190687104247626), (42, 0.006568079299633002), (43, 0.00281609984766685), (44, 0.005702868803565928), (45, 0.012794858940286327), (46, 0.005091784945100637), (47, 0.000224931592926975), (48, 0.0010396261441299112), (49, 5.131106273029015e-05), (50, 0.000153731634993817), (51, 0.0019446594244046296), (52, 0.0036702776341755714), (53, 0.000825521804625046)]\n"
      ]
     }
    ],
@@ -456,17 +456,6 @@
     "datos que estime conveniente teniendo en cuenta que el modelo de aprendizaje con\n",
     "el que va a tratar de resolver el problema es un  ́arbol de regresión. Finalmente\n",
     "responda a las siguientes preguntas**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b67e919c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.5, random_state=42)"
    ]
   },
   {
@@ -1203,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "c6877e6e",
    "metadata": {},
    "outputs": [
@@ -1211,8 +1200,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bagging R²: 0.9619488\n",
-      "Bagging MSE: 0.0095128\n"
+      "Bagging R²: 0.7895840550243778\n",
+      "Bagging MSE: 0.2788999219244921\n"
      ]
     }
    ],
@@ -1239,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "1d487e34",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1249,7 @@
     "        n_estimators=100,\n",
     "        max_depth=None,\n",
     "        random_state=42,\n",
-    "        n_jobs=1\n",
+    "        n_jobs=-1\n",
     "    ))\n",
     "])\n",
     "\n",
@@ -1273,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "4473e906",
    "metadata": {},
    "outputs": [
@@ -1306,12 +1295,181 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e606f35c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Modelo</th>\n",
+       "      <th>R2_test</th>\n",
+       "      <th>MSE_test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GradientBoosting</td>\n",
+       "      <td>0.803744</td>\n",
+       "      <td>0.260132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RandomForest</td>\n",
+       "      <td>0.792307</td>\n",
+       "      <td>0.275290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bagging</td>\n",
+       "      <td>0.792306</td>\n",
+       "      <td>0.275292</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Modelo   R2_test  MSE_test\n",
+       "0  GradientBoosting  0.803744  0.260132\n",
+       "1      RandomForest  0.792307  0.275290\n",
+       "2           Bagging  0.792306  0.275292"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import BaggingRegressor, RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Definimos los pipelines\n",
+    "pipelines = {\n",
+    "    \"Bagging\": Pipeline([\n",
+    "        (\"model\", BaggingRegressor(\n",
+    "            estimator=DecisionTreeRegressor(\n",
+    "                max_depth=None,\n",
+    "                min_samples_split=5,\n",
+    "                min_samples_leaf=3,\n",
+    "                random_state=42\n",
+    "            ),\n",
+    "            n_estimators=150,\n",
+    "            max_samples=1.0,\n",
+    "            max_features=1.0,\n",
+    "            random_state=42,\n",
+    "            n_jobs=-1\n",
+    "        ))\n",
+    "    ]),\n",
+    "\n",
+    "    \"RandomForest\": Pipeline([\n",
+    "        (\"model\", RandomForestRegressor(\n",
+    "            n_estimators=200,\n",
+    "            max_depth=None,\n",
+    "            min_samples_split=5,\n",
+    "            min_samples_leaf=3,\n",
+    "            random_state=42,\n",
+    "            n_jobs=-1\n",
+    "        ))\n",
+    "    ]),\n",
+    "\n",
+    "    \"GradientBoosting\": Pipeline([\n",
+    "        (\"model\", GradientBoostingRegressor(\n",
+    "            n_estimators=200,\n",
+    "            learning_rate=0.1,\n",
+    "            max_depth=3,\n",
+    "            min_samples_split=5,\n",
+    "            min_samples_leaf=3,\n",
+    "            subsample=1.0,\n",
+    "            random_state=42\n",
+    "        ))\n",
+    "    ])\n",
+    "}\n",
+    "\n",
+    "# Entrenamiento y evaluación\n",
+    "results = []\n",
+    "for name, pipe in pipelines.items():\n",
+    "    pipe.fit(X_train, y_train)\n",
+    "    y_pred = pipe.predict(X_test)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    results.append({\n",
+    "        \"Modelo\": name,\n",
+    "        \"R2_test\": r2,\n",
+    "        \"MSE_test\": mse\n",
+    "    })\n",
+    "\n",
+    "# DataFrame con los resultados\n",
+    "df_results = pd.DataFrame(results).sort_values(by=\"R2_test\", ascending=False).reset_index(drop=True)\n",
+    "df_results"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "94afa7a8",
    "metadata": {},
    "source": [
     "\n",
     "**1. ¿Cuáles son los hiperparámetros más relevantes de los métodos anteriores?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "318732f3",
+   "metadata": {},
+   "source": [
+    "**BaggingRegressor**\n",
+    "\n",
+    "Los hiperparámetros más relevantes son:\n",
+    "\n",
+    "* **n_estimators**: número de estimadores o modelos base que conforman el ensemble.\n",
+    "* **max_samples**: proporción de muestras del conjunto de entrenamiento empleadas en cada estimador.\n",
+    "* **max_features**: proporción de características seleccionadas para cada modelo base.\n",
+    "\n",
+    "Estos parámetros controlan la diversidad entre los modelos y, por tanto, la reducción de varianza obtenida mediante el bagging.\n",
+    "\n",
+    "**RandomForestRegressor**\n",
+    "\n",
+    "Los hiperparámetros más determinantes son:\n",
+    "\n",
+    "* **n_estimators**: número total de árboles que forman el bosque.\n",
+    "* **max_depth**: profundidad máxima de los árboles individuales.\n",
+    "* **max_features**: número máximo de variables consideradas en cada división.\n",
+    "\n",
+    "Estos parámetros influyen directamente en la complejidad del modelo y en el equilibrio entre precisión y capacidad de generalización**.\n",
+    "\n",
+    "**GradientBoostingRegressor**\n",
+    "\n",
+    "Los hiperparámetros más relevantes son:\n",
+    "\n",
+    "* **n_estimators**: número de árboles añadidos de forma secuencial.\n",
+    "* **learning_rate**: tasa de aprendizaje que regula la contribución de cada nuevo árbol.\n",
+    "\n",
+    "Estos parámetros determinan el compromiso entre sesgo y varianza y el ritmo de aprendizaje del modelo."
    ]
   },
   {
@@ -1326,7 +1484,15 @@
    "cell_type": "markdown",
    "id": "57f194b7",
    "metadata": {},
-   "source": []
+   "source": [
+    "Sí, es cierto. Los métodos ensemble combinan varios modelos base para obtener un modelo más robusto y preciso que un estimador individual.\n",
+    "\n",
+    "Por ejemplo, si intentamos predecir el precio de una vivienda con un solo árbol de decisión, el resultado depende mucho de cómo se dividen los datos: el modelo puede sobreajustarse al conjunto de entrenamiento y no generalizar bien.\n",
+    "\n",
+    "En cambio, si utilizamos un ensemble (por ejemplo, un conjunto de 100 árboles), cada árbol se entrena con un subconjunto distinto del dataset, y posteriormente se promedian sus predicciones. Este proceso reduce la varianza y hace que el modelo final sea más estable y preciso.\n",
+    "\n",
+    "En conclusión, los métodos *ensemble* mejoran el rendimiento frente a un árbol de decisión aislado, al combinar múltiples modelos que aprenden de manera complementaria y reducen tanto el sobreajuste como la variabilidad del modelo."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1340,7 +1506,14 @@
    "cell_type": "markdown",
    "id": "9b2395cc",
    "metadata": {},
-   "source": []
+   "source": [
+    "No siempre. En general, usar más estimadores puede mejorar el modelo al hacerlo más estable y reducir los errores, pero llega un punto en el que añadir más no mejora el resultado y solo aumenta el tiempo de entrenamiento.\n",
+    "\n",
+    "En Bagging y Random Forest, más árboles ayudan al principio, pero después el rendimiento se estabiliza.\n",
+    "En Gradient Boosting, usar demasiados estimadores puede incluso empeorar el modelo si la tasa de aprendizaje es alta, ya que puede sobreajustarse a los datos de entrenamiento.\n",
+    "\n",
+    "En conclusión, no por tener más estimadores el modelo será mejor: lo importante es encontrar un número adecuado que equilibre precisión y eficiencia."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1354,7 +1527,10 @@
    "cell_type": "markdown",
    "id": "9649f506",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, la interpretabilidad disminuye notablemente en los modelos ensemble.\n",
+    "Mientras que un árbol de decisión individual es fácil de entender, ya que permite seguir las reglas de decisión que llevan a una predicción, es decir, las condiciones que el modelo utiliza para dividir los datos y determinar el resultado, métodos como Bagging, Random Forest o Gradient Boosting combinan muchos árboles, haciendo que el proceso interno sea mucho más complejo y difícil de explicar."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1368,7 +1544,15 @@
    "cell_type": "markdown",
    "id": "9d57ec63",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, los modelos ensemble no son completamente deterministas por naturaleza, ya que incluyen procesos aleatorios en su entrenamiento.\n",
+    "En algoritmos como Bagging y Random Forest, los subconjuntos de datos y las características se eligen de forma aleatoria en cada ejecución, y en Gradient Boosting también puede existir aleatoriedad en el muestreo de las observaciones (subsample).\n",
+    "\n",
+    "Según la documentación oficial de scikit-learn, incluso al fijar el parámetro random_state, pueden producirse pequeñas diferencias entre ejecuciones si existen varias divisiones posibles con la misma ganancia de criterio, ya que el algoritmo selecciona una de ellas de forma aleatoria.\n",
+    "Por tanto, el modelo no es totalmente determinista, aunque la fijación de random_state sí garantiza una reproducibilidad práctica (es decir, los mismos resultados en la mayoría de las ejecuciones).\n",
+    "\n",
+    "En conclusión, los modelos ensemble no son completamente deterministas, pero al establecer random_state se logra un comportamiento reproducible y estable entre ejecuciones."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1452,9 +1636,9 @@
     "plt.show()\n",
     "\n",
     "# Paso 2: Dividir el dataset en conjunto de entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
-    "                                                    test_size=0.5,\n",
-    "                                                    random_state=42)\n"
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+    "                                                    #test_size=0.5,\n",
+    "                                                    #random_state=42)\n"
    ]
   },
   {
